fix: fix header to pixel perfect

--- a/index.html
+++ b/index.html
@@ -36,24 +36,24 @@
       <div class="nav__wrapper wrapper">
         <ul class="nav__links">
           <li class="nav__link">
-            <a class="bold primary text">МОБИЛЬНЫЕ ТЕЛЕФОНЫ</a>
+            <a class="bold primary text_small">МОБИЛЬНЫЕ ТЕЛЕФОНЫ</a>
           </li>
           <li class="nav__link">
-            <a class="bold primary text">ПЛАНШЕТЫ</a>
+            <a class="bold primary text_small">ПЛАНШЕТЫ</a>
           </li>
           <li class="nav__link">
-            <a class="bold primary text">ФОТОТЕХНИКА</a>
+            <a class="bold primary text_small">ФОТОТЕХНИКА</a>
           </li>
           <li class="nav__link">
-            <a class="bold primary text">НОУТБУКИ</a>
+            <a class="bold primary text_small">НОУТБУКИ</a>
           </li>
           <li class="nav__link">
-            <a class="bold primary text">ТЕЛЕВИЗОРЫ</a>
+            <a class="bold primary text_small">ТЕЛЕВИЗОРЫ</a>
           </li>
         </ul>
         <div class="trash">
-          <img src="" alt="">
-          <span class="trash__text text primary regular">КОРЗИНА</span>
+          <img src="/assets/trash-icon-white.svg" alt="cart icon">
+          <span class="trash__text text_small primary regular">КОРЗИНА</span>
         </div>
       </div>
     </nav>
