feat: create script to open search

--- a/index.html
+++ b/index.html
@@ -263,5 +263,6 @@
     </div>
   </main>
 </body>
+<script src="/scripts/openSearch.js"></script>
 <script src="/scripts/customSelect.js"></script>
 </html>
