feat: add hover to search

--- a/index.html
+++ b/index.html
@@ -28,7 +28,9 @@
             8 800 777 50 50
           </div>
           <div class="search header__search">
-            <img src="/assets/search-icon.svg" alt="search icon"> 
+            <svg xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17" fill="none">
+              <path d="M10.8182 1.85353C8.34684 -0.617843 4.3245 -0.617843 1.85313 1.85353C-0.617709 4.32543 -0.617709 8.34724 1.85313 10.8191C4.05395 13.0194 7.48162 13.2552 9.95138 11.537C10.0033 11.7829 10.1223 12.0176 10.3135 12.2089L13.9126 15.808C14.4371 16.3314 15.2847 16.3314 15.8065 15.808C16.3304 15.284 16.3304 14.4365 15.8065 13.9141L12.2074 10.3139C12.0172 10.1243 11.782 10.0048 11.5361 9.95285C13.2553 7.48255 13.0196 4.05542 10.8182 1.85353ZM9.6819 9.68284C7.83681 11.5279 4.83399 11.5279 2.98943 9.68284C1.14541 7.83775 1.14541 4.83546 2.98943 2.99037C4.83399 1.14581 7.83681 1.14581 9.6819 2.99037C11.527 4.83546 11.527 7.83775 9.6819 9.68284Z" fill="white"/>
+            </svg>
             <input class="search__input primary text_small regular" type="text" placeholder="Поиск товаров">
           </div>
         </div>
