--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/index.css">
+  <link rel="stylesheet" href="./index.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
@@ -158,7 +158,7 @@
       <section class="products">
         <ul class="products__list">
           <li class="product product_big">
-            <img src="/assets/big_product-image.png" alt="product photo" class="product__img">
+            <img src="./assets/big_product-image.png" alt="product photo" class="product__img">
             <div class="product__info">
               <div class="info__title">
                 <h2 class="text secondary">Canon EOS 5D Mark III Body</h2>
@@ -173,7 +173,7 @@
             </div>
           </li>
           <li class="product">
-            <img src="/assets/product-image.png" alt="product photo" class="product__img">
+            <img src="./assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
@@ -182,7 +182,7 @@
             </div>
           </li>
           <li class="product">
-            <img src="/assets/product-image.png" alt="product photo" class="product__img">
+            <img src="./assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
@@ -191,7 +191,7 @@
             </div>
           </li>
           <li class="product">
-            <img src="/assets/product-image.png" alt="product photo" class="product__img">
+            <img src="./assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
@@ -200,7 +200,7 @@
             </div>
           </li>
           <li class="product">
-            <img src="/assets/product-image.png" alt="product photo" class="product__img">
+            <img src="./assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
@@ -209,7 +209,7 @@
             </div>
           </li>
           <li class="product">
-            <img src="/assets/product-image.png" alt="product photo" class="product__img">
+            <img src="./assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
@@ -218,7 +218,7 @@
             </div>
           </li>
           <li class="product">
-            <img src="/assets/product-image.png" alt="product photo" class="product__img">
+            <img src="./assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
@@ -227,7 +227,7 @@
             </div>
           </li>
           <li class="product">
-            <img src="/assets/product-image.png" alt="product photo" class="product__img">
+            <img src="./assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
@@ -236,7 +236,7 @@
             </div>
           </li>
           <li class="product">
-            <img src="/assets/product-image.png" alt="product photo" class="product__img">
+            <img src="./assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
@@ -245,7 +245,7 @@
             </div>
           </li>
           <li class="product">
-            <img src="/assets/product-image.png" alt="product photo" class="product__img">
+            <img src="./assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
@@ -254,7 +254,7 @@
             </div>
           </li>
           <li class="product">
-            <img src="/assets/product-image.png" alt="product photo" class="product__img">
+            <img src="./assets/product-image.png" alt="product photo" class="product__img">
             <h2 class="product__title secondary">Canon EOS 5D Mark III Body</h2>
             <div class="product__text description description-size">Полнокадровая цифровая зеркальная камера, предназначенная для опытных любителей, профессиональных фотографов.</div>
             <div class="product__price">
@@ -275,7 +275,7 @@
         <div class="filter" id="logotype-modal">
           <button class="filter__button">
             <span class="filter__value filter-color text_small">Любого логотипа</span>
-            <img class="filter__image" src="/assets/select-icon.svg" alt="" class="select-icon">
+            <img class="filter__image" src="./assets/select-icon.svg" alt="" class="select-icon">
           </button>
           <ul class="filter__dropdown">
             <li class="filter__element">
@@ -299,7 +299,7 @@
         <div class="filter" id="brend-modal">
           <button class="filter__button">
             <span class="filter__value filter-color text_small">Любого бренда</span>
-            <img class="filter__image" src="/assets/select-icon.svg" alt="" class="select-icon">
+            <img class="filter__image" src="./assets/select-icon.svg" alt="" class="select-icon">
           </button>
           <ul class="filter__dropdown">
             <li class="filter__element">
@@ -337,8 +337,8 @@
     </div>
   </div>
 </body>
-<script src="/scripts/modal.js"></script>
-<script src="/scripts/burgerMenu.js"></script>
-<script src="/scripts/openSearch.js"></script>
-<script src="/scripts/customSelect.js"></script>
+<script src="./scripts/modal.js"></script>
+<script src="./scripts/burgerMenu.js"></script>
+<script src="./scripts/openSearch.js"></script>
+<script src="./scripts/customSelect.js"></script>
 </html>
